fixing layout issues concerning section heights for mobile (higher than wider) devices

--- a/src/components/HomeMain.css
+++ b/src/components/HomeMain.css
@@ -11,18 +11,30 @@
 
     .home-hero {
         flex-basis: calc(500% / 23);
+        width: 60%;
     }
     
     .home-highlights {
         flex-basis: calc(600% / 23);
+        width: 60%;
     }
     
     .home-testimonials {
         flex-basis: calc(600% / 23);
+        width: 70%;
     }
     
     .home-about {
         flex-basis: calc(600% / 23);
+        width: 60%;
+    }
+
+    .home-hero-text {
+        flex-basis: 65%;
+    }
+
+    .home-hero-image {
+        flex-basis: 35%;
     }
 }
 
@@ -39,18 +51,30 @@
 
     .home-hero {
         flex-basis: 22%;
+        width: 80%;
     }
     
     .home-highlights {
         flex-basis: 28%;
+        width: 80%;
     }
     
     .home-testimonials {
         flex-basis: 28%;
+        width: 90%;
     }
     
     .home-about {
         flex-basis: 22%;
+        width: 80%;
+    }
+
+    .home-hero-text {
+        flex-basis: 65%;
+    }
+
+    .home-hero-image {
+        flex-basis: 35%;
     }
 }
 
@@ -63,7 +87,6 @@
 
 .home-hero {
     flex-shrink: 0;
-    width: 60%;
     padding-left: 20%;
     padding-right: 20%;
     background: linear-gradient(#495e57 80%, transparent 0%);
@@ -74,7 +97,6 @@
 
 .home-highlights {
     flex-shrink: 0;
-    width: 60%;
     padding-left: 20%;
     padding-right: 20%;
     display: flex;
@@ -106,7 +128,6 @@
 
 .home-testimonials {
     flex-shrink: 0;
-    width: 70%;
     padding-left: 15%;
     padding-right: 15%;
     background-color: #495E57;
@@ -118,7 +139,6 @@
 
 .home-about {
     flex-shrink: 0;
-    width: 60%;
     padding-left: 20%;
     padding-right: 20%;
     display: flex;
