--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,3 +1,15 @@
+@media (min-width: 600px) {
+    .top-nav-link {
+        font-size: 1.5vw;
+    }
+}
+
+@media (max-width: 599px) {
+    .top-nav-link {
+        font-size: 2.5vw;
+    }
+}
+
 .top-nav {
     display: flex;
     flex-direction: row;
@@ -8,13 +20,15 @@
 
 .top-nav > h1 {
     margin: 0 0 0;
+    display: flex;
+    flex-basis: 25%;
 }
 
 .top-logo-figure {
     height: 100%;
     display: flex;
     flex-direction: column;
-    flex-basis: 25%;
+    flex-basis: 100%;
     flex-shrink: 0;
     justify-content: center;
     margin: 0;
@@ -37,7 +51,6 @@
     flex-basis: 12.5%;
     align-items: center;
     font-family: 'Karla', sans-serif;
-    font-size: 1.5vw;
 }
 
 .home-link {
